# Hyperion

./: LICENSE  NOTICE  README.md
Hyperion v0.0.0/: CMakeLists.txt
Hyperion v0.0.0/NeuralNetworks/NeuralNet/: neuralNet.cpp
Hyperion v0.0.0/NeuralNetworks/NeuralNet/headers/: neuralNet.h
Hyperion v0.0.0/NeuralNetworks/enumsAndLoss/: LossFunctions.cpp
Hyperion v0.0.0/NeuralNetworks/enumsAndLoss/headers/: ActivationFunction.h  LayerType.h  LossFunction.h
Hyperion v0.0.0/NeuralNetworks/layers/: attentive.cpp  baseLayerTemplate.cpp  convo.cpp  dropout.cpp  embedding.cpp  fullConn.cpp  normalization.cpp  pooling.cpp  recurrent.cpp  residual.cpp
Hyperion v0.0.0/NeuralNetworks/layers/headers/: baseLayerTemplate.h  convo.h  embedding.h  fullConn.h  normalization.h  pooling.h  recurrent.h  residual.h
Hyperion v0.0.0/PreProcessing/: PreProcessing.cpp
Hyperion v0.0.0/PreProcessing/headers/: PreProcessing.h
Hyperion v0.0.0/headers/: LossFunction.h  attentive.h  baseLayerTemplate.h  convo.h  dropout.h  embedding.h  fullConn.h  neuralNet.h  normalization.h  pooling.h  recurrent.h  residual.h
Hyperion v0.0.0/src/: LossFunctions.cpp  PreProcessing.cpp  attentive.cpp  baseLayerTemplate.cpp  convo.cpp  dropout.cpp  embedding.cpp  fullConn.cpp  neuralNet.cpp  normalization.cpp  pooling.cpp  recurrent.cpp  residual.cpp
